# nb_conda_store_kernels

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  environment.yaml  flake.nix  setup.cfg  setup.py
.github/workflows/: release.yaml  tests.yaml
nb_conda_store_kernels/: discovery.py  install.py  manager.py  runner.py
tests/assets/: conda_store_config.py  jupyter_config.py
