[metadata]
name = nb_conda_store_kernels
version = attr: nb_conda_store_kernels.__version__
description = Launch Jupyter kernels from Conda-Store
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Christopher Ostrouchov
author_email = chris.ostrouchov@gmail.com
url = https://github.com/Quansight/nb_conda_store_kernels
keywords = conda
license = BSD License
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only
project_urls =
  Bug Reports = https://github.com/quansight/nb_conda_store_kernels
  Documentation = https://nb_conda_store_kernels.readthedocs.io/
  Source = https://github.com/quansight/nb_conda_store_kernels

[options]
zip_safe = True
packages = find:
install_requires =
  conda-store
  traitlets
  jupyter-client

[options.entry_points]
jupyter_client.kernel_providers =
  conda-store = nb_conda_store_kernels.discovery:CondaStoreKernelProvider

[options.extras_require]
dev = pytest; pytest-mock; black==22.3.0; flake8; sphinx; recommonmark; pydata-sphinx-theme; build; twine

[options.packages.find]
exclude =
    tests

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 89
exclude =
  .git,
  __pycache__,
